# image-processor

./: .gitignore  CMakeLists.txt  application.cpp  application.h  application_settings.h  bmp.cpp  bmp.h  bmp_image_converter.cpp  bmp_image_converter.h  command_line_parser.cpp  command_line_parser.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter.h  filter_factory.cpp  filter_factory.h  fisheye_filter.cpp  fisheye_filter.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  image.cpp  image.h  image_processor.cpp  negative_filter.cpp  negative_filter.h  pipeline.cpp  pipeline.h  readme.md  rgb_color.cpp  rgb_color.h  sharpening_filter.cpp  sharpening_filter.h
docs/: Doxyfile
image_processor/core/: bmp_image_converter.cpp  bmp_image_converter.h  bmp_image_converter.hpp  image.hpp  pipeline.cpp  pipeline.h  pipeline.hpp  rgb_color.cpp  rgb_color.hpp
image_processor/factory/: filter_factory.cpp  filter_factory.h  filter_factory.hpp
image_processor/filters/: crop_filter.cpp  crop_filter.h  crop_filter.hpp  crop_filter_producer.cpp  crop_filter_producer.hpp  edge_detection_filter.cpp  edge_detection_filter.h  edge_detection_filter.hpp  edge_detection_filter_producer.cpp  edge_detection_filter_producer.hpp  filter.h  filter.hpp  filter_producer.cpp  filter_producer.hpp  filter_settings.hpp  fisheye_filter.cpp  fisheye_filter.hpp  fisheye_filter_producer.cpp  fisheye_filter_producer.hpp  gaussian_blur_filter.cpp  gaussian_blur_filter.hpp  gaussian_blur_filter_producer.cpp  gaussian_blur_filter_producer.hpp  grayscale_filter.cpp  grayscale_filter.h  grayscale_filter.hpp  grayscale_filter_producer.cpp  grayscale_filter_producer.hpp  negative_filter.cpp  negative_filter.h  negative_filter.hpp  negative_filter_producer.cpp  negative_filter_producer.hpp  sharpening_filter.cpp  sharpening_filter.h  sharpening_filter.hpp  sharpening_filter_producer.cpp  sharpening_filter_producer.hpp
image_processor/io/: bmp.cpp  bmp.h  bmp.hpp
image_processor/main/: application.cpp  application.h  application.hpp  application_settings.h  application_settings.hpp  command_line_parser.cpp  command_line_parser.h  command_line_parser.hpp  error_code.cpp  error_code.hpp  image_processor.cpp
test_script/: test_image_processor.py
